# geophys_utils

./: .git-blame-ignore-revs  pyproject.toml
archive/: requirements.txt
examples/: aem_netcdf_test.ipynb  dynamic_point_gridding_utils.py  fetch_points_demo.ipynb  geophys_point_fetcher.py  get_nearest_points_demo.ipynb  get_netcdf_util_demo.py  line_data_demo.py  nearest_geophys_point_finder.py  plot_point_dataset.py  tile_gridder.py
examples/dynamic_kmls/: app.py
src/geophys_utils/: __init__.py  _array2file.py  _array_pieces.py  _blrb.py  _concave_hull.py  _crs_utils.py  _csw_utils.py  _data_stats.py  _datetime_utils.py  _dem_utils.py  _gdal_grid_utils.py  _get_netcdf_util.py  _netcdf_grid_utils.py  _netcdf_line_utils.py  _netcdf_point_utils.py  _netcdf_utils.py  _polygon_utils.py  _transect_utils.py  _vincenty.py  csw_find.py  csw_utils_settings.yml  nc2aseg.py  rechunk.py
src/geophys_utils/dataset_metadata_cache/: __init__.py  _dataset_metadata_cache.py  _postgres_dataset_metadata_cache.py  _sqlite_dataset_metadata_cache.py  csw2dataset_metadata_cache.py  dataset_search_demo.py  netcdf2dataset_metadata_cache.py
src/geophys_utils/netcdf_converter/: __init__.py  _to_netcdf_converter.py  _to_netcdf_converter_national.py  aseg_gdf2netcdf_converter.py  aseg_gdf_utils.py  csv2netcdf_converter.py  grav2netcdf_converter.py  grav2netcdf_converter_national.py  grav2netcdf_converter_national_global_attribute_setter.py  grav2netcdf_converter_national_remove_points_outside_bbox.py  netcdf2aseg_gdf_converter.py  test_netcdf_converter.py
src/geophys_utils/test/: __init__.py  __main__.py  test_array_pieces.py  test_crs_utils.py  test_data_stats.py  test_netcdf_grid_utils.py  test_netcdf_line_utils.py  test_netcdf_point_utils.py
