[build-system]
requires = ["setuptools>=80", "setuptools_scm[simple]>=8.1"]
build-backend = "setuptools.build_meta"


[project]
name = "gswa_geophys_utils"
version = "0.1.1"
description = "Geophysics data access utilities"
authors = [
  { name="Alex Ip", email="alex@trentham.net.au" },
  { name="Andrew Turner", email="andrew.turner@ga.gov.au" },
  { name="Luke Smith", email="luke.smith@dmpe.wa.gov.au" },
]
maintainers = [
  { name="Geological Survey of Western Australia", email="gdi.contact@dmpe.wa.gov.au" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    # Low risk — pure patch/minor bumps, no breaking changes
    "numpy>=1.26.4,<2.0",       # was 1.24.3 — stay on 1.x for now (see below)
    "affine>=2.4.0",            # was 2.3.0 — tiny library, stable API
    "pyyaml>=6.0.2",            # was 6.0 — only bugfixes
    "requests>=2.31.0",         # was 2.29.0 — security patches, stable API
    "unidecode>=1.3.8",         # was 1.3.6 — minor only
    "zipstream-new>=1.1.8",     # was 1.1.8 — leave as-is, very niche

    # Moderate — API-stable minor version bumps
    "netCDF4>=1.7.4",           # was 1.6.4 — actively maintained, new features
    "numexpr>=2.10.0",          # was 2.8.4 — confirmed numpy 2.0-compatible
    "owslib>=0.28.0",           # was 0.24.1 — regular minor releases, same API
    "scipy>=1.11.0,<2.0",       # was 1.10.1 — safe bump; avoid 2.x until clearer
    "scikit-image>=0.22.0",     # was 0.19.3 — numpy 2.0 compat; note API changes
    "shapely>=2.0.6",           # was 2.0.1

    # Higher caution — significant version jumps with known breaking changes
    "matplotlib>=3.8.0,<4.0",   # was 3.7.1
    "cartopy>=0.23.0",          # was 0.18.0
    "gdal==3.8.5",              # was 3.6.2
]

[project.urls]
"Homepage" = "https://github.com/geoscienceaustralia/geophys_utils"
"Bug Tracker" = "https://github.com/geoscienceaustralia/geophys_utils/issues"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools_scm]
